--- a/src/componenets/Films/FilmItem/FilmItem.module.css
+++ b/src/componenets/Films/FilmItem/FilmItem.module.css
@@ -63,7 +63,7 @@
   -ms-transform: scale(1.4);
   transform: scale(1.4);
 }
-.svg-star {
+.svg_star {
   position: absolute;
   top: 8%;
   left: 79%;
@@ -72,7 +72,7 @@
   fill: #fff;
   cursor: pointer;
 }
-.svg-star:hover {
+.svg_star:hover {
   -webkit-transform: scale(1.5);
   -ms-transform: scale(1.5);
   transform: scale(1.5);
