--- a/src/componenets/Films/Films.module.css
+++ b/src/componenets/Films/Films.module.css
@@ -18,6 +18,7 @@ body {
   height: auto;
   margin: 0 auto;
   padding-top: 50px;
+  min-height: 100vh;
 }
 .fix_bag_height {
   min-height: 70.5vh;
