start to add favorte film

--- a/src/componenets/FilmItem/FilmItem.module.css
+++ b/src/componenets/FilmItem/FilmItem.module.css
@@ -315,7 +315,7 @@
 /* .svg_star {
   pointer-events:inherit;
 } */
-/* .btn::after{
+.btn::after{
   content: '';
   background: url('../../assets/images/sprite.svg#star-full');;
   width: 30px;
@@ -324,4 +324,4 @@
   background-color: red;
   position: absolute;
   z-index: 5;
-} */
+}
